# rosalind

./: .gitignore  main.py  merged.ipynb  rebel.ipynb  rosalind.ipynb
hapcounter/: extract_reads.pyx  pyproject.toml  test_integration.py  test_unit.py
hapcounter/snapshot/: output.tsv
ukhsa/: demo_data_age.csv  demo_data_sex.csv  isolate_of_interest.vcf  submission.ipynb
