[project]
name = "test-task-hap-counter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.3",
    "polars>=1.32.3",
    "pyinstrument>=5.1.1",
    "pysam>=0.23.3",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.404",
    "ruff>=0.12.10",
]
